# spotify-client

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PROMPT.md  README.md  pyproject.toml
.claude/skills/spotify/: SKILL.md
memory/: 2026-03-06.md  2026-03-09.md
src/spotify_client/: __init__.py  auth.py  client.py  config.py  exceptions.py  helpers.py
src/spotify_client/cli/: __init__.py  album.py  artist.py  audio.py  audiobook.py  episode.py  playlist.py  recommend.py  search.py  show.py  track.py  user.py
src/spotify_client/domains/: __init__.py  albums.py  artists.py  audio.py  audiobooks.py  episodes.py  playlists.py  recommendations.py  search.py  shows.py  tracks.py  user.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_helpers.py
tests/test_domains/: test_albums.py  test_artists.py  test_audio.py  test_audiobooks.py  test_episodes.py  test_playlists.py  test_recommendations.py  test_search.py  test_shows.py  test_tracks.py  test_user.py
