[project]
name = "spotify-client"
version = "0.1.0"
description = "Python utility for interfacing with Spotify data programmatically"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spotipy>=2.25.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.scripts]
spotify = "spotify_client.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["spotify_client"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
